--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^6.0.2",
     "@angular/router": "^6.0.2",
     "core-js": "^2.5.4",
+    "http-server": "^0.11.1",
     "ngx-spinner": "^6.0.0",
     "rxjs": "^6.0.0",
     "web3": "^0.20.0",
